--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <title>Profiles Carousel</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Profiles Viewer</title>
   <style>
-    /* === Wrapper === */
+    /* === Wrapper & Layout === */
     #profile-wrapper {
       text-align: center;
       max-width: 360px;
@@ -19,45 +19,42 @@
     }
 
     /* === Profile Blocks === */
-    .profile { display: none; margin-bottom: 12px; }
-    .profile.active { display: block; }
+    .profile {
+      display: none;
+      border-radius: 14px;
+      margin-bottom: 10px;
+    }
+    .profile.active {
+      display: block;
+    }
 
     /* === Slider & Video === */
     .slider {
       position: relative;
       width: 100%;
-      border-radius: 14px;
       overflow: hidden;
-      margin-bottom: 8px;
+      border-radius: 14px;
+      margin-bottom: 10px;
     }
     .slider video {
-      display: block;
       width: 100%;
-      max-width: 320px;
+      max-width: 340px;   /* keeps it smaller */
       margin: 0 auto;
+      display: block;
+      aspect-ratio: 9/16;
       border-radius: 14px;
       background: #000;
-      aspect-ratio: 9 / 16;
-      object-fit: contain; /* keeps whole video visible */
+      object-fit: contain; /* helps Safari */
     }
 
-    /* Safari-specific tweaks */
-    @supports (-webkit-touch-callout: none) {
-      .slider video {
-        max-width: 300px !important;
-        height: auto !important;
-        object-fit: contain !important;
-      }
-    }
-
-    /* === Bio Card === */
+    /* === Bio Cards === */
     .bio-card {
       background: #000;
       color: #fff;
       border-radius: 14px;
       padding: 12px;
       box-shadow: 0 4px 14px rgba(0,0,0,0.3);
-      margin-bottom: 8px;
+      margin-bottom: 10px;
       opacity: 0;
       transform: translateY(20px);
       transition: opacity 0.6s ease, transform 0.6s ease;
@@ -66,10 +63,11 @@
       opacity: 1;
       transform: translateY(0);
     }
-    .bio-name { font-size: 20px; font-weight: 700; margin-bottom: 4px; }
-    .bio-info { font-size: 14px; color: #aaa; margin-bottom: 4px; }
+
+    .bio-name { font-size: 22px; font-weight: 800; margin-bottom: 4px; }
+    .bio-info { font-size: 14px; line-height: 1.4; color: #aaa; margin-bottom: 2px; }
     .bio-info span { font-weight: 600; color: #fff; }
-    .fruit-pick { font-size: 18px; font-weight: 700; margin-top: 6px; }
+    .fruit-pick { font-size: 21px; font-weight: 700; margin: 6px 0; }
 
     /* === Nav Buttons === */
     .nav-buttons {
@@ -82,13 +80,13 @@
     .nav-buttons button, .meet-btn {
       padding: 6px 18px;
       border-radius: 800px;
-      font-weight: 800;
+      font-weight: 900;
       font-size: 13px;
       cursor: pointer;
       border: none;
       background: #DFF41F;
       color: #000;
-      transition: all 0.3s ease;
+      transition: background 0.3s, transform 0.2s, box-shadow 0.3s;
       flex: 1;
     }
     .nav-buttons button:hover, .meet-btn:hover {
@@ -98,8 +96,22 @@
     }
     .meet-btn { flex: 1; max-width: 120px; margin: 0 auto; }
 
-    /* === Full Height Fix === */
-    html, body { margin: 0; padding: 0; height: 100%; overflow-x: hidden; }
+    /* === Safari-Specific Fixes === */
+    @supports (-webkit-touch-callout: none) {
+      .slider video {
+        max-width: 320px !important;
+        height: auto !important;
+        object-fit: contain !important;
+      }
+    }
+
+    html, body {
+      height: 100%;
+      overflow-x: hidden;
+      -webkit-overflow-scrolling: touch;
+      margin: 0;
+      padding: 0;
+    }
   </style>
 </head>
 <body>
@@ -113,89 +125,65 @@
   </div>
 
   <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const container = document.getElementById("profiles-container");
-      let allProfiles = [];
-      let activeIndex = 0;
-      const API_KEY = "7dli8bleg4bq8";
+    const container = document.getElementById('profiles-container');
+    let allProfiles = [];
+    let activeIndex = 0;
+    const API_KEY = '7dli8bleg4bq8';
 
-      fetch(`https://sheetdb.io/api/v1/${API_KEY}?limit=50`)
-        .then((res) => res.json())
-        .then((profiles) => {
-          allProfiles = profiles;
-          renderProfiles(allProfiles);
-          showProfile(activeIndex);
-          sendHeight(); // adjust iframe height
-        });
-
-      function renderProfiles(profiles) {
-        profiles.forEach((profile) => {
-          const profileDiv = document.createElement("div");
-          profileDiv.classList.add("profile");
-
-          // Slider + video
-          const slider = document.createElement("div");
-          slider.classList.add("slider");
-
-          (profile.VideoIDs || "")
-            .split(/[\n,]+/)
-            .forEach((url) => {
-              url = url.trim();
-              if (!url) return;
-              const videoEl = document.createElement("video");
-              videoEl.src = url;
-              videoEl.autoplay = true;
-              videoEl.muted = true;
-              videoEl.loop = true;
-              videoEl.playsInline = true;
-              videoEl.controls = false;
-              slider.appendChild(videoEl);
-            });
-
-          profileDiv.appendChild(slider);
-
-          // Bio card
-          const bio = document.createElement("div");
-          bio.classList.add("bio-card");
-          bio.innerHTML = `
-            <div class="bio-name">${profile.Name || ""}</div>
-            <div class="bio-info"><span>📍 Location:</span> ${profile.Location || ""}</div>
-            <div class="bio-info"><span>🎂 Age:</span> ${profile.Age || ""}</div>
-            <div class="bio-info"><span>💖 Orientation:</span> ${profile.Orientation || ""}</div>
-            <div class="fruit-pick">${profile.FruitPick || ""}</div>
-          `;
-          profileDiv.appendChild(bio);
-          container.appendChild(profileDiv);
-        });
-      }
-
-      function showProfile(index) {
-        const profiles = document.querySelectorAll(".profile");
-        profiles.forEach((p) => p.classList.remove("active"));
-        if (profiles[index]) profiles[index].classList.add("active");
-        sendHeight();
-      }
-
-      document.getElementById("prev-btn").addEventListener("click", () => {
-        activeIndex = (activeIndex > 0) ? activeIndex - 1 : allProfiles.length - 1;
+    fetch(`https://sheetdb.io/api/v1/${API_KEY}?limit=50`)
+      .then(res => res.json())
+      .then(profiles => {
+        allProfiles = profiles;
+        renderProfiles(allProfiles);
         showProfile(activeIndex);
+        sendHeight(); // ensure Shopify adjusts
       });
 
-      document.getElementById("next-btn").addEventListener("click", () => {
-        activeIndex = (activeIndex < allProfiles.length - 1) ? activeIndex + 1 : 0;
-        showProfile(activeIndex);
+    function renderProfiles(profiles) {
+      profiles.forEach(profile => {
+        const profileDiv = document.createElement('div');
+        profileDiv.className = 'profile';
+
+        profileDiv.innerHTML = `
+          <div class="slider">
+            <video src="${profile.video}" autoplay muted loop playsinline></video>
+          </div>
+          <div class="bio-card">
+            <div class="bio-name">${profile.name || "Unnamed"}</div>
+            <div class="bio-info"><span>Age:</span> ${profile.age || ""}</div>
+            <div class="bio-info"><span>City:</span> ${profile.city || ""}</div>
+            <div class="fruit-pick">${profile.fruit || ""}</div>
+          </div>
+        `;
+
+        container.appendChild(profileDiv);
       });
+    }
 
-      // Post height to parent (Shopify iframe)
-      function sendHeight() {
-        setTimeout(() => {
-          const height = document.body.scrollHeight;
-          window.parent.postMessage({ type: "setHeight", height }, "*");
-        }, 300);
-      }
+    function showProfile(index) {
+      document.querySelectorAll('.profile').forEach((p, i) => {
+        p.classList.toggle('active', i === index);
+      });
+      sendHeight();
+    }
 
-      window.addEventListener("resize", sendHeight);
+    document.getElementById('prev-btn').addEventListener('click', () => {
+      activeIndex = (activeIndex - 1 + allProfiles.length) % allProfiles.length;
+      showProfile(activeIndex);
     });
+    document.getElementById('next-btn').addEventListener('click', () => {
+      activeIndex = (activeIndex + 1) % allProfiles.length;
+      showProfile(activeIndex);
+    });
+
+    // === Height Sync for Shopify Iframe ===
+    function sendHeight() {
+      const height = document.body.scrollHeight;
+      window.parent.postMessage({ type: "setHeight", height }, "*");
+    }
+    window.addEventListener("load", sendHeight);
+    window.addEventListener("resize", sendHeight);
+    setInterval(sendHeight, 500);
   </script>
 </body>
 </html>
