--- a/index.html
+++ b/index.html
@@ -1,189 +1,201 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Profiles Viewer</title>
-  <style>
-    /* === Wrapper & Layout === */
-    #profile-wrapper {
-      text-align: center;
-      max-width: 360px;
-      width: 95%;
-      margin: 0 auto;
-      background: #000;
-      padding: 10px;
-      border-radius: 14px;
-      color: #fff;
-      font-family: 'Helvetica Neue', Arial, sans-serif;
-    }
-
-    /* === Profile Blocks === */
-    .profile {
-      display: none;
-      border-radius: 14px;
-      margin-bottom: 10px;
-    }
-    .profile.active {
-      display: block;
-    }
-
-    /* === Slider & Video === */
-    .slider {
-      position: relative;
-      width: 100%;
-      overflow: hidden;
-      border-radius: 14px;
-      margin-bottom: 10px;
-    }
-    .slider video {
-      width: 100%;
-      max-width: 340px;   /* keeps it smaller */
-      margin: 0 auto;
-      display: block;
-      aspect-ratio: 9/16;
-      border-radius: 14px;
-      background: #000;
-      object-fit: contain; /* helps Safari */
-    }
-
-    /* === Bio Cards === */
-    .bio-card {
-      background: #000;
-      color: #fff;
-      border-radius: 14px;
-      padding: 12px;
-      box-shadow: 0 4px 14px rgba(0,0,0,0.3);
-      margin-bottom: 10px;
-      opacity: 0;
-      transform: translateY(20px);
-      transition: opacity 0.6s ease, transform 0.6s ease;
-    }
-    .profile.active .bio-card {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    .bio-name { font-size: 22px; font-weight: 800; margin-bottom: 4px; }
-    .bio-info { font-size: 14px; line-height: 1.4; color: #aaa; margin-bottom: 2px; }
-    .bio-info span { font-weight: 600; color: #fff; }
-    .fruit-pick { font-size: 21px; font-weight: 700; margin: 6px 0; }
-
-    /* === Nav Buttons === */
-    .nav-buttons {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-top: 8px;
-      gap: 10px;
-    }
-    .nav-buttons button, .meet-btn {
-      padding: 6px 18px;
-      border-radius: 800px;
-      font-weight: 900;
-      font-size: 13px;
-      cursor: pointer;
-      border: none;
-      background: #DFF41F;
-      color: #000;
-      transition: background 0.3s, transform 0.2s, box-shadow 0.3s;
-      flex: 1;
-    }
-    .nav-buttons button:hover, .meet-btn:hover {
-      transform: scale(1.08);
-      background: #c8db1c;
-      box-shadow: 0 4px 12px rgba(223, 244, 31, 0.6);
-    }
-    .meet-btn { flex: 1; max-width: 120px; margin: 0 auto; }
-
-    /* === Safari-Specific Fixes === */
-    @supports (-webkit-touch-callout: none) {
-      .slider video {
-        max-width: 320px !important;
-        height: auto !important;
-        object-fit: contain !important;
-      }
-    }
-
-    html, body {
-      height: 100%;
-      overflow-x: hidden;
-      -webkit-overflow-scrolling: touch;
-      margin: 0;
-      padding: 0;
-    }
-  </style>
-</head>
-<body>
-  <div id="profile-wrapper">
-    <div id="profiles-container"></div>
-    <div class="nav-buttons">
-      <button id="prev-btn">Prev</button>
-      <button class="meet-btn">Meet</button>
-      <button id="next-btn">Next</button>
-    </div>
+<!-- Profile Carousel Container -->
+<div id="profile-wrapper">
+  <div id="profiles-container"></div>
+  <div class="nav-buttons">
+    <button id="prev-btn">Prev</button>
+    <button class="meet-btn">Meet</button>
+    <button id="next-btn">Next</button>
   </div>
+</div>
 
-  <script>
-    const container = document.getElementById('profiles-container');
-    let allProfiles = [];
-    let activeIndex = 0;
-    const API_KEY = '7dli8bleg4bq8';
+<style>
+/* === Wrapper & Layout === */
+#profile-wrapper {
+  text-align: center;
+  max-width: 380px;
+  width: 95%;
+  margin: 0 auto;
+  background: #000;
+  padding: 10px;
+  border-radius: 14px;
+  color: #fff;
+  font-family: 'Helvetica Neue', Arial, sans-serif;
+}
 
-    fetch(`https://sheetdb.io/api/v1/${API_KEY}?limit=50`)
-      .then(res => res.json())
-      .then(profiles => {
-        allProfiles = profiles;
-        renderProfiles(allProfiles);
-        showProfile(activeIndex);
-        sendHeight(); // ensure Shopify adjusts
-      });
+/* === Profile Blocks === */
+.profile {
+  display: none;
+  border-radius: 14px;
+  margin-bottom: 10px;
+}
+.profile.active { display: block; }
 
-    function renderProfiles(profiles) {
-      profiles.forEach(profile => {
-        const profileDiv = document.createElement('div');
-        profileDiv.className = 'profile';
+/* === Slider & Video === */
+.slider {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 14px;
+  margin-bottom: 10px;
+}
+.slides {
+  display: flex;
+  transition: transform 0.3s ease;
+}
+.slides video {
+  width: 100%;
+  max-width: 360px; /* adjusts size */
+  margin: 0 auto;
+  display: block;
+  aspect-ratio: 9/16;
+  border-radius: 14px;
+  background: #000;
+  object-fit: contain; /* safari fix */
+  cursor: pointer; /* shows clickable for cycling */
+}
 
-        profileDiv.innerHTML = `
-          <div class="slider">
-            <video src="${profile.video}" autoplay muted loop playsinline></video>
-          </div>
-          <div class="bio-card">
-            <div class="bio-name">${profile.name || "Unnamed"}</div>
-            <div class="bio-info"><span>Age:</span> ${profile.age || ""}</div>
-            <div class="bio-info"><span>City:</span> ${profile.city || ""}</div>
-            <div class="fruit-pick">${profile.fruit || ""}</div>
-          </div>
-        `;
+/* === Bio Cards === */
+.bio-card {
+  background: #000;
+  color: #fff;
+  border-radius: 14px;
+  padding: 12px;
+  box-shadow: 0 4px 14px rgba(0,0,0,0.3);
+  margin-bottom: 10px;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.6s ease, transform 0.6s ease;
+}
+.profile.active .bio-card { opacity: 1; transform: translateY(0); }
 
-        container.appendChild(profileDiv);
-      });
-    }
+.bio-name { font-size: 22px; font-weight: 800; margin-bottom: 4px; }
+.bio-info { font-size: 14px; line-height: 1.4; color: #aaa; margin-bottom: 2px; }
+.bio-info span { font-weight: 600; color: #fff; }
+.fruit-pick { font-size: 21px; font-weight: 700; margin: 6px 0; }
 
-    function showProfile(index) {
-      document.querySelectorAll('.profile').forEach((p, i) => {
-        p.classList.toggle('active', i === index);
-      });
-      sendHeight();
-    }
+/* === Nav Buttons === */
+.nav-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 8px;
+  gap: 10px;
+}
+.nav-buttons button, .meet-btn {
+  padding: 6px 18px;
+  border-radius: 800px;
+  font-weight: 900;
+  font-size: 13px;
+  cursor: pointer;
+  border: none;
+  background: #DFF41F;
+  color: #000;
+  transition: background 0.3s, transform 0.2s, box-shadow 0.3s;
+  flex: 1;
+}
+.nav-buttons button:hover, .meet-btn:hover {
+  transform: scale(1.08);
+  background: #c8db1c;
+  box-shadow: 0 4px 12px rgba(223, 244, 31, 0.6);
+}
+.meet-btn { flex: 1; max-width: 120px; margin: 0 auto; }
 
-    document.getElementById('prev-btn').addEventListener('click', () => {
-      activeIndex = (activeIndex - 1 + allProfiles.length) % allProfiles.length;
+/* === Safari-Specific Fixes === */
+@supports (-webkit-touch-callout: none) {
+  .slides video { max-width: 340px !important; height: auto !important; object-fit: contain !important; }
+}
+html, body { height: 100%; overflow-x: hidden; -webkit-overflow-scrolling: touch; }
+</style>
+
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+  const container = document.getElementById('profiles-container');
+  const API_KEY = '7dli8bleg4bq8';
+  let allProfiles = [];
+  let activeIndex = 0;
+  let sessionViews = JSON.parse(sessionStorage.getItem('viewedProfiles') || '[]');
+
+  // Fetch all profiles
+  fetch(`https://sheetdb.io/api/v1/${API_KEY}?limit=50`)
+    .then(res => res.json())
+    .then(profiles => {
+      allProfiles = profiles;
+      renderProfiles(profiles);
       showProfile(activeIndex);
     });
-    document.getElementById('next-btn').addEventListener('click', () => {
-      activeIndex = (activeIndex + 1) % allProfiles.length;
-      showProfile(activeIndex);
-    });
 
-    // === Height Sync for Shopify Iframe ===
-    function sendHeight() {
-      const height = document.body.scrollHeight;
-      window.parent.postMessage({ type: "setHeight", height }, "*");
+  function renderProfiles(profiles) {
+    profiles.forEach(profile => {
+      const profileDiv = document.createElement('div');
+      profileDiv.classList.add('profile');
+      profileDiv.dataset.customId = profile.CustomID;
+
+      // Slider
+      const slider = document.createElement('div'); slider.classList.add('slider');
+      const slides = document.createElement('div'); slides.classList.add('slides');
+      slider.appendChild(slides);
+
+      profileDiv.appendChild(slider);
+
+      // Bio card
+      const bio = document.createElement('div'); bio.classList.add('bio-card');
+      bio.innerHTML = `
+        <div class="bio-name">${profile.Name}</div>
+        <div class="bio-info"><span>📍 Location:</span> ${profile.Location}</div>
+        <div class="bio-info"><span>🎂 Age:</span> ${profile.Age}</div>
+        <div class="bio-info"><span>💖 Orientation:</span> ${profile.Orientation}</div>
+        <div class="fruit-pick">${profile.FruitPick||''}</div>
+      `;
+      profileDiv.appendChild(bio);
+      container.appendChild(profileDiv);
+
+      // Render videos for this profile
+      const videos = (profile.VideoIDs||'').split(/[\n,]+/).filter(v=>v.trim()!=='');
+      let currentVideoIndex = 0;
+
+      if(videos.length>0){
+        const videoEl = document.createElement('video');
+        videoEl.src = videos[currentVideoIndex];
+        videoEl.autoplay = true;
+        videoEl.muted = true;
+        videoEl.loop = true;
+        videoEl.playsInline = true;
+        videoEl.controls = false;
+        videoEl.style.display = "block";
+        slides.appendChild(videoEl);
+
+        // Allow user to click to cycle through videos
+        videoEl.addEventListener('click', ()=>{
+          currentVideoIndex = (currentVideoIndex + 1) % videos.length;
+          videoEl.src = videos[currentVideoIndex];
+          videoEl.play();
+        });
+      }
+    });
+  }
+
+  function showProfile(index){
+    const profiles = document.querySelectorAll('.profile');
+    profiles.forEach(p=>p.classList.remove('active'));
+    const current = profiles[index];
+    if(!current) return;
+    current.classList.add('active');
+
+    const profileID = current.dataset.customId;
+    if(profileID && !sessionViews.includes(profileID)){
+      sessionViews.push(profileID);
+      sessionStorage.setItem('viewedProfiles', JSON.stringify(sessionViews));
     }
-    window.addEventListener("load", sendHeight);
-    window.addEventListener("resize", sendHeight);
-    setInterval(sendHeight, 500);
-  </script>
-</body>
-</html>
+  }
+
+  // Navigation buttons
+  document.getElementById('prev-btn').addEventListener('click', ()=>{
+    activeIndex = (activeIndex>0)?activeIndex-1:allProfiles.length-1;
+    showProfile(activeIndex);
+  });
+  document.getElementById('next-btn').addEventListener('click', ()=>{
+    activeIndex = (activeIndex<allProfiles.length-1)?activeIndex+1:0;
+    showProfile(activeIndex);
+  });
+});
+</script>
