--- a/index.html
+++ b/index.html
@@ -1,136 +1,132 @@
-<div id="profile-wrapper">
-  <div id="profiles-container"></div>
-</div>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Profiles Video Carousel</title>
 <style>
-#profile-wrapper {
-  text-align: center;
-  max-width: 380px;
-  margin: 0 auto;
-  background: #000;
-  padding: 10px;
-  border-radius: 14px;
-  color: #fff;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
-}
+/* === Wrapper & Layout === */
+body { background:#000; margin:0; font-family:'Helvetica Neue', Arial, sans-serif; color:#fff; text-align:center; }
+#profile-wrapper { max-width:380px; width:95%; margin:20px auto; }
 
-.profile { 
-  border-radius: 14px; 
-  margin-bottom: 10px; 
-}
+/* === Profile Blocks === */
+.profile { border-radius:14px; margin-bottom:20px; }
 
+/* === Video Slider === */
 .video-container {
   position: relative;
-  width: 100%;
-  max-width: 360px;
-  margin: 0 auto;
-  border-radius: 14px;
-  overflow: hidden;
+  width:100%;
+  max-width:360px;
+  margin:0 auto;
+  border-radius:14px;
+  overflow:hidden;
 }
-
 .video-container video {
-  width: 100%;
-  display: block;
-  aspect-ratio: 9/16;
-  border-radius: 14px;
-  object-fit: contain;
-  background: #000;
+  width:100%;
+  display:block;
+  aspect-ratio:9/16;
+  border-radius:14px;
+  object-fit:contain;
+  background:#000;
 }
 
 /* Arrows */
 .video-container .arrow {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  color: #fff;
-  font-size: 30px;
-  background: rgba(0,0,0,0.5);
-  padding: 8px 12px;
-  border-radius: 50%;
-  cursor: pointer;
-  user-select: none;
+  position:absolute;
+  top:50%;
+  transform:translateY(-50%);
+  color:#fff;
+  font-size:30px;
+  background:rgba(0,0,0,0.5);
+  padding:8px 12px;
+  border-radius:50%;
+  cursor:pointer;
+  user-select:none;
 }
-.video-container .arrow.left { left: 5px; }
-.video-container .arrow.right { right: 5px; }
+.video-container .arrow.left { left:5px; }
+.video-container .arrow.right { right:5px; }
 
-/* Bio Card */
+/* === Bio Cards === */
 .bio-card {
-  background: #000;
-  color: #fff;
-  border-radius: 14px;
-  padding: 12px;
-  box-shadow: 0 4px 14px rgba(0,0,0,0.3);
-  margin-top: 8px;
+  background:#000;
+  color:#fff;
+  border-radius:14px;
+  padding:12px;
+  box-shadow:0 4px 14px rgba(0,0,0,0.3);
+  margin-top:8px;
 }
-.bio-name { font-size: 22px; font-weight: 800; margin-bottom: 4px; }
-.bio-info { font-size: 14px; color: #aaa; margin-bottom: 2px; }
-.bio-info span { font-weight: 600; color: #fff; }
-.fruit-pick { font-size: 21px; font-weight: 700; margin: 6px 0; }
+.bio-name { font-size:22px; font-weight:800; margin-bottom:4px; }
+.bio-info { font-size:14px; color:#aaa; margin-bottom:2px; }
+.bio-info span { font-weight:600; color:#fff; }
+.fruit-pick { font-size:21px; font-weight:700; margin:6px 0; }
 </style>
+</head>
+<body>
+<div id="profile-wrapper"></div>
 
 <script>
-document.addEventListener('DOMContentLoaded', function() {
-  const container = document.getElementById('profiles-container');
-  const API_KEY = '7dli8bleg4bq8';
-  
-  fetch(`https://sheetdb.io/api/v1/${API_KEY}?limit=50`)
-    .then(res => res.json())
-    .then(profiles => {
-      profiles.forEach(profile => {
-        const profileDiv = document.createElement('div');
-        profileDiv.classList.add('profile');
+const container = document.getElementById('profile-wrapper');
+const API_KEY = '7dli8bleg4bq8';
 
-        // Video container
-        const videoContainer = document.createElement('div');
-        videoContainer.classList.add('video-container');
+fetch(`https://sheetdb.io/api/v1/${API_KEY}?limit=50`)
+  .then(res => res.json())
+  .then(profiles => {
+    profiles.forEach(profile => {
+      const profileDiv = document.createElement('div');
+      profileDiv.classList.add('profile');
 
-        const videoEl = document.createElement('video');
-        videoEl.src = (profile.VideoIDs || '').split(/[\n,]+/)[0] || '';
-        videoEl.autoplay = true;
-        videoEl.muted = true;
-        videoEl.loop = true;
-        videoEl.playsInline = true;
-        videoEl.controls = false;
-        videoContainer.appendChild(videoEl);
+      // Video container
+      const videoContainer = document.createElement('div');
+      videoContainer.classList.add('video-container');
 
-        // Arrows
-        const left = document.createElement('div');
-        left.classList.add('arrow', 'left'); left.textContent = '<';
-        const right = document.createElement('div');
-        right.classList.add('arrow', 'right'); right.textContent = '>';
-        videoContainer.appendChild(left); videoContainer.appendChild(right);
+      const videoEl = document.createElement('video');
+      const videos = (profile.VideoIDs || '').split(/[\n,]+/).filter(v=>v);
+      let currentIndex = 0;
+      videoEl.src = videos[currentIndex] || '';
+      videoEl.autoplay = true;
+      videoEl.muted = true;
+      videoEl.loop = true;
+      videoEl.playsInline = true;
+      videoEl.controls = false;
+      videoContainer.appendChild(videoEl);
 
-        profileDiv.appendChild(videoContainer);
+      // Arrows
+      const left = document.createElement('div');
+      left.classList.add('arrow', 'left'); left.textContent = '<';
+      const right = document.createElement('div');
+      right.classList.add('arrow', 'right'); right.textContent = '>';
+      videoContainer.appendChild(left); videoContainer.appendChild(right);
 
-        // Bio
-        const bio = document.createElement('div'); bio.classList.add('bio-card');
-        bio.innerHTML = `
-          <div class="bio-name">${profile.Name}</div>
-          <div class="bio-info"><span>📍 Location:</span> ${profile.Location}</div>
-          <div class="bio-info"><span>🎂 Age:</span> ${profile.Age}</div>
-          <div class="bio-info"><span>💖 Orientation:</span> ${profile.Orientation}</div>
-          <div class="fruit-pick">${profile.FruitPick||''}</div>
-        `;
-        profileDiv.appendChild(bio);
-
-        container.appendChild(profileDiv);
-
-        // Video cycling
-        const videos = (profile.VideoIDs || '').split(/[\n,]+/).filter(v=>v);
-        let currentIndex = 0;
-        left.addEventListener('click', () => {
-          if (!videos.length) return;
-          currentIndex = (currentIndex - 1 + videos.length) % videos.length;
-          videoEl.src = videos[currentIndex];
-          videoEl.play();
-        });
-        right.addEventListener('click', () => {
-          if (!videos.length) return;
-          currentIndex = (currentIndex + 1) % videos.length;
-          videoEl.src = videos[currentIndex];
-          videoEl.play();
-        });
+      // Arrow click events
+      left.addEventListener('click', () => {
+        if (!videos.length) return;
+        currentIndex = (currentIndex - 1 + videos.length) % videos.length;
+        videoEl.src = videos[currentIndex];
+        videoEl.play();
       });
+      right.addEventListener('click', () => {
+        if (!videos.length) return;
+        currentIndex = (currentIndex + 1) % videos.length;
+        videoEl.src = videos[currentIndex];
+        videoEl.play();
+      });
+
+      profileDiv.appendChild(videoContainer);
+
+      // Bio
+      const bio = document.createElement('div'); bio.classList.add('bio-card');
+      bio.innerHTML = `
+        <div class="bio-name">${profile.Name}</div>
+        <div class="bio-info"><span>📍 Location:</span> ${profile.Location}</div>
+        <div class="bio-info"><span>🎂 Age:</span> ${profile.Age}</div>
+        <div class="bio-info"><span>💖 Orientation:</span> ${profile.Orientation}</div>
+        <div class="fruit-pick">${profile.FruitPick||''}</div>
+      `;
+      profileDiv.appendChild(bio);
+
+      container.appendChild(profileDiv);
     });
-});
+  });
 </script>
+</body>
+</html>
